--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "gas-tools",
+  "name": "chain-tools",
   "version": "0.1.0",
   "private": true,
+  "license": "AGPL-3.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
